--- a/index.html
+++ b/index.html
@@ -9,15 +9,95 @@
 <body>
     <header>
         <!-- logo,h1  -->
+        <img src="img/Logo.png" alt="logo">
+        <h1>Toboolist</h1>
     </header>
     <main>
         <nav>
-            <!-- bottoni -->
+            <button>Add task</button>
+            <button>Add section</button>
         </nav>
         <!-- icona,h2_div(span,testo,span/div) -->
-        <section></section>
-        <section></section>
-        <section></section>
+        <section>
+            <h2>Lorem, ipsum.</h2>
+            <ul>
+                <li>
+                    <div>
+                        <span>&check;</span>
+                        <span>Lorem ipsum dolor sit amet.</span>
+                        <span>Lorem.</span>
+                    </div>
+                </li>
+            </ul>
+        </section>
+
+        <section>
+            <h2>Lorem, ipsum.</h2>
+            <ul>
+                <li>
+                    <div>
+                        <span>&check;</span>
+                        <span>Lorem ipsum dolor sit amet.</span>
+                        <span>Lorem.</span>
+                    </div>
+                </li>
+                <li>
+                    <div>
+                        <span>&check;</span>
+                        <span>Lorem ipsum dolor sit amet.</span>
+                        <span>Lorem.</span>
+                    </div>
+                </li>
+                <li>
+                    <div>
+                        <span>&cross;</span>
+                        <span>Lorem ipsum dolor sit amet.</span>
+                        <span>Lorem.</span>
+                    </div>
+                </li>
+                <li>
+                    <div>
+                        <span>&check;</span>
+                        <span>Lorem ipsum dolor sit amet.</span>
+                        <span>Lorem.</span>
+                    </div>
+                </li>
+            </ul>
+        </section>
+
+        <section>
+            <h2>Lorem, ipsum.</h2>
+            <ul>
+                <li>
+                    <div>
+                        <span>&cross;</span>
+                        <span>Lorem ipsum dolor sit amet.</span>
+                        <span>Lorem.</span>
+                    </div>
+                </li>
+                <li>
+                    <div>
+                        <span>&check;</span>
+                        <span>Lorem ipsum dolor sit amet.</span>
+                        <span>Lorem.</span>
+                    </div>
+                </li>
+                <li>
+                    <div>
+                        <span>&check;</span>
+                        <span>Lorem ipsum dolor sit amet.</span>
+                        <span>Lorem.</span>
+                    </div>
+                </li>
+                <li>
+                    <div>
+                        <span>&check;</span>
+                        <span>Lorem ipsum dolor sit amet.</span>
+                        <span>Lorem.</span>
+                    </div>
+                </li>
+            </ul>
+        </section>
     </main>
 </body>
 </html>
