added header and defition of color

--- a/index.html
+++ b/index.html
@@ -7,17 +7,19 @@
     <title>toboolist</title>
 </head>
 <body>
+
     <header>
-        <!-- logo,h1  -->
         <img src="img/Logo.png" alt="logo">
-        <h1>Toboolist</h1>
+        <h1 class="title inline-block ">Toboolist</h1>
     </header>
+
     <main>
+
         <nav>
-            <button>Add task</button>
-            <button>Add section</button>
+            <button class="text-white bg-blue">Add task</button>
+            <button class="">Add section</button>
         </nav>
-        <!-- icona,h2_div(span,testo,span/div) -->
+        <!-- 1 -->
         <section>
             <h2>Lorem, ipsum.</h2>
             <ul>
@@ -30,7 +32,7 @@
                 </li>
             </ul>
         </section>
-
+        <!-- 2 -->
         <section>
             <h2>Lorem, ipsum.</h2>
             <ul>
@@ -64,7 +66,7 @@
                 </li>
             </ul>
         </section>
-
+        <!-- 3 -->
         <section>
             <h2>Lorem, ipsum.</h2>
             <ul>
@@ -99,5 +101,6 @@
             </ul>
         </section>
     </main>
+
 </body>
 </html>
