--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
         <nav>
             <button class="text-white bg-blue">Add task</button>
-            <button class="">Add section</button>
+            <button class="text-light-gray">Add section</button>
         </nav>
         <!-- 1 -->
         <section>
