added all sections

--- a/index.html
+++ b/index.html
@@ -17,85 +17,84 @@
 
         <nav>
             <button class="text-white bg-blue">Add task</button>
-            <button class="text-light-gray">Add section</button>
+            <button>Add section</button>
         </nav>
         <!-- 1 -->
         <section>
-            <h2>Lorem, ipsum.</h2>
+            <h3>Lorem, ipsum.</h3>
             <ul>
                 <li>
                     <div>
-                        <span>&check;</span>
+                        <span class="check">&check;</span>
                         <span>Lorem ipsum dolor sit amet.</span>
-                        <span>Lorem.</span>
+                        <span class="tag bg-blue">Lorem.</span>
                     </div>
                 </li>
             </ul>
         </section>
         <!-- 2 -->
         <section>
-            <h2>Lorem, ipsum.</h2>
+            <h3>Lorem, ipsum.</h3>
             <ul>
                 <li>
                     <div>
-                        <span>&check;</span>
+                        <span class="check">&check;</span>
                         <span>Lorem ipsum dolor sit amet.</span>
-                        <span>Lorem.</span>
+                        <span class="tag bg-blue">Lorem.</span>
                     </div>
                 </li>
                 <li>
                     <div>
-                        <span>&check;</span>
+                        <span class="check">&check;</span>
                         <span>Lorem ipsum dolor sit amet.</span>
-                        <span>Lorem.</span>
+                        <span class="tag bg-violet">Lorem.</span>
                     </div>
                 </li>
                 <li>
                     <div>
-                        <span>&cross;</span>
+                        <span class="cross">&cross;</span>
                         <span>Lorem ipsum dolor sit amet.</span>
-                        <span>Lorem.</span>
+                        <span class="tag bg-green">Lorem.</span>
                     </div>
                 </li>
                 <li>
                     <div>
-                        <span>&check;</span>
+                        <span class="check">&check;</span>
                         <span>Lorem ipsum dolor sit amet.</span>
-                        <span>Lorem.</span>
+                        <span class="tag bg-orange">Lorem.</span>
                     </div>
                 </li>
             </ul>
         </section>
         <!-- 3 -->
         <section>
-            <h2>Lorem, ipsum.</h2>
+            <h3>Lorem, ipsum.</h3>
             <ul>
                 <li>
                     <div>
-                        <span>&cross;</span>
+                        <span class="cross">&cross;</span>
                         <span>Lorem ipsum dolor sit amet.</span>
-                        <span>Lorem.</span>
                     </div>
                 </li>
                 <li>
                     <div>
-                        <span>&check;</span>
+                        <span class="check">&check;</span>
                         <span>Lorem ipsum dolor sit amet.</span>
-                        <span>Lorem.</span>
+                        <span class="tag bg-magenta">Lorem.</span>
                     </div>
                 </li>
                 <li>
                     <div>
-                        <span>&check;</span>
+                        <span class="check">&check;</span>
                         <span>Lorem ipsum dolor sit amet.</span>
-                        <span>Lorem.</span>
+                        <span class="tag bg-yellow-green">Lorem.</span>
                     </div>
                 </li>
                 <li>
                     <div>
-                        <span>&check;</span>
+                        <span class="check">&check;</span>
                         <span>Lorem ipsum dolor sit amet.</span>
-                        <span>Lorem.</span>
+                        <span class="tag bg-blue">Lorem.</span>
                     </div>
                 </li>
             </ul>
